--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
                 </div>
             </div>
             <div class="mission-content">
-                <h3>Seyfert Galaxies</h3>
+                <h3>Understanding The Cosmochemistry Behind The Elemental Abundance Of Seyfert Galaxies: A Review</h3>
                 <p class="mission-desc">
-                    Investigating the cosmochemistry and - 
+                    This review illustrates the interaction of stellar nucleosynthesis and AGN feedback on the evolution of galaxies through the synergies that exist in the two processes and indicates the necessity for expanded observational campaigns 
                 </p>
                 <div class="mission-payload">
                     <span class="tech-tag">Spectroscopy</span>
@@ -133,14 +133,14 @@
                 </div>
             </div>
             <div class="mission-content">
-                <h3>Colour, Mind and Space</h3>
+                <h3>Colour, Mind & Space</h3>
                 <p class="mission-desc">
-                    Researching on -
+                    A systematic review of colour psychology on psychological well-being of astronauts and analog mission participants in space habitats
                 </p>
                 <div class="mission-payload">
                     <span class="tech-tag">Human Factors</span>
                     <span class="tech-tag">Space Psychology</span>
-                    <span class="tech-tag">Research</span>
+                    <span class="tech-tag">Astronaut well-being</span>
                 </div>
             </div>
 		</div>
@@ -597,6 +597,7 @@
 		
 	</body>
 </html>
+
 
 
 
