--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         
         <!-- Project 1: LAMES (Personal) -->
         <div class="mission-card">
-            <div class="mission-status pulse-green">Status: Prototyping</div>
+            <div class="mission-status pulse-green">Status: Brainstorming Ideas</div>
             <div class="mission-image">
                 <!-- Use a techy/blueprint image for this -->
                 <img src="images/pic01.jpg" alt="LAMES Project" />
@@ -91,7 +91,7 @@
             <div class="mission-content">
                 <h3>LAMES: Lunar and Mars Escort System</h3>
                 <p class="mission-desc">
-                    <strong>Personal Project:</strong> Designing an autonomous escort system for Lunar and Mars for -
+                    <strong>Personal Project:</strong> The Lunar And Mars Escort System (LAMES) is a research initiative aimed to develop an “escort” support system for astronauts on the Moon and Mars. 
                 </p>
                 <div class="mission-payload">
                     <span class="tech-tag"></span>
@@ -103,7 +103,7 @@
 
         <!-- Project 2: Seyfert Galaxies -->
         <div class="mission-card">
-            <div class="mission-status pulse-blue">Status: Proof reading </div>
+            <div class="mission-status pulse-blue">Status: Proof reading</div>
             <div class="mission-image">
                 <img src="images/pic02.jpg" alt="Seyfert Galaxy Research" />
                 <div class="mission-overlay">
@@ -113,7 +113,7 @@
             <div class="mission-content">
                 <h3>Understanding The Cosmochemistry Behind The Elemental Abundance Of Seyfert Galaxies: A Review</h3>
                 <p class="mission-desc">
-                    This review illustrates the interaction of stellar nucleosynthesis and AGN feedback on the evolution of galaxies through the synergies that exist in the two processes and indicates the necessity for expanded observational campaigns 
+                    This review illustrates -  
                 </p>
                 <div class="mission-payload">
                     <span class="tech-tag">Spectroscopy</span>
@@ -597,6 +597,7 @@
 		
 	</body>
 </html>
+
 
 
 
