--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </div>
 			
             <div class="mission-content">
-                <h3>Project: Pause, Prove and Protect</h3>
+                <h3>Project PPP: Pause, Prove and Protect</h3>
                 <p class="mission-desc">
                     <strong>Group Project:</strong> Internet Saftey and -
                 </p>
@@ -597,6 +597,7 @@
 		
 	</body>
 </html>
+
 
 
 
