--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
 							<article id="intro" class="panel-main">
 								<h2 class="section-title">Introduction</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>WHY SO CURIOUS? Stop <a href="#CV">Stalking Me!!</a>.</p>
-								<p>Will update soon</p>
+								<p></p>
+								<p>Will write soon</p>
 							</article>
 
 						<!-- CV -->
 							<article id="CV" class="panel-main">
 								<h2 class="section-title">CV</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Why you still stalking me dude?</p>
-								<p>Mind your own business! Ohhh, you don't have that?</p>
+								<p>Page still under construction</p>
+								<p>Contact <a href="#contact">Pawana</a> directly for CV</p>
 								<a href="cv.pdf" class="pink-btn">Download CV</a>
 							</article>
 
@@ -597,6 +597,7 @@
 		
 	</body>
 </html>
+
 
 
 
