--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
         <div class="star-card" data-target="poem-3">
 			<div class="card-icon"><i class="fas fa-shield-halved anim-jupiter"></i></div>
-			<h3>Were you my Jupiter?</h3>
+			<h3>Could've been the Jupiter to my Earth</h3>
 		</div>
 
         <div class="star-card" data-target="poem-4">
@@ -319,7 +319,7 @@
 
 <!-- Poem 3: Were you my Jupiter? -->
 <div id="poem-3" class="poem hidden">
-    <h2 class="section-title">Were you my Jupiter?</h2>
+    <h2 class="section-title">Could've been the Jupiter to my Earth</h2>
     
     <div class="simple-poem-content">
         <div class="verse-stanza">
@@ -342,10 +342,9 @@
 		
         <div class="verse-stanza">
             <p>Did you protect me from the hail storm of meteors?</p>
-            <p>Did you make me feel ME?</p>
-            <p>Was it just me?</p>
-            <p>Or was it the rest three?</p>
-            <p>Or was it the ones that revolve around you?</p>
+            <p>Did you do it for me?</p>
+            <p>Or was it for the rest three?</p>
+            <p>Or was it for the ones that orbit around you?</p>
             <p>Did you see me while you were surrounded by the <em>nighty fives</em>?</p>
             <p>Hello?</p>
             <p>Where'd I go (4 u)?</p>
@@ -597,6 +596,7 @@
 		
 	</body>
 </html>
+
 
 
 
