--- a/index.html
+++ b/index.html
@@ -332,24 +332,27 @@
             <p>You lit up a path from your window — burning bright</p>
             <p>When on the floor I cried; waiting for a guiding light</p>
         </div>
-                
-        <div class="verse-stanza">
-           <p>Passing right by you the meteor hit me hard</p>
-            <p>Leaving me eternally scarred</p> 
-			<p>Scar turns into scars</p>
-            <p>But we're so afar</p>
-		</div>
 		
         <div class="verse-stanza">
             <p>Did you protect me from the hail storm of meteors?</p>
             <p>Did you do it for me?</p>
             <p>Or was it for the rest three?</p>
             <p>Or was it for the ones that orbit around you?</p>
-            <p>Did you see me while you were surrounded by the <em>nighty fives</em>?</p>
+		</div>
+
+		<div class="verse-stanza">
+            <p>Can you see me while you are surrounded by the <em>nighty fives</em>?</p>
             <p>Hello?</p>
             <p>Where'd I go (4 u)?</p>
         </div>
-        
+		
+        <div class="verse-stanza">
+           <p>Passing right by you the meteor hit me hard</p>
+            <p>Leaving me eternally scarred</p> 
+			<p>Scar turned into scars</p>
+            <p>But we were so afar</p>
+		</div>
+		
 		<div class="verse-stanza">
 			<p>I won't confess that I waited for your shield</p>
             <p>but would the debris of wax tears of my candle lie?</p>
@@ -596,6 +599,7 @@
 		
 	</body>
 </html>
+
 
 
 
