--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 		<div class="verse-stanza">
             <p>Wondering if it really was the light from your lantern being refracted</p>
             <p>or a reflection from the broken pieces of mirror in your room.</p>
-            <p>Maybe it was a mirage of illusions as my hope was crushed</p>
+            <p>Maybe it was a mirage of illusions as my hope was being crushed</p>
             <p>and swallowed by the blackholes in my mind.</p>
         </div>
         
@@ -599,6 +599,7 @@
 		
 	</body>
 </html>
+
 
 
 
