--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <div class="star-map-grid">
         
         <div class="star-card" data-target="poem-1">
-            <div class="card-icon"><i class="fas fa-meteor anim-meteor"></i></div>
+            <div class="card-icon"><i class="fas fa-meteor anim-lock"></i></div>
             <h3>Thought I finally seized the edge</h3>
         </div>
        
@@ -218,7 +218,7 @@
 		</div>
 
         <div class="star-card" data-target="poem-3">
-			<div class="card-icon"><i class="fas fa-shield-halved anim-jupiter"></i></div>
+			<div class="card-icon"><i class="fas fa-shield-halved anim-meteor"></i></div>
 			<h3>Could've been the Jupiter to my Earth</h3>
 		</div>
 
@@ -599,6 +599,7 @@
 		
 	</body>
 </html>
+
 
 
 
